--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "__config": "cpp"
+        "__config": "cpp",
+        "cstring": "cpp"
     }
 }
